package squareup.wire.exemplar;

option java_package = "com.squareup.protos.wire.exemplar";
option java_multiple_files = true;
option java_generic_services = true;

message MuchAwesome {
  optional string very_proto = 1;
}